--- a/.classpath
+++ b/.classpath
@@ -14,12 +14,12 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry excluding="resources/" kind="src" path="src/main"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-16">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-16">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="/home/a.guindo@gop.link/.m2/repository/org/apache/commons/commons-lang3/3.12.0/commons-lang3-3.12.0.jar" sourcepath="/home/a.guindo@gop.link/.m2/repository/org/apache/commons/commons-lang3/3.12.0/commons-lang3-3.12.0-sources.jar">
+	<classpathentry kind="lib" path="/home/a.guindo@gop.link/.m2/repository/org/apache/commons/commons-lang3/3.12.0/commons-lang3-3.12.0.jar" sourcepath="/home/a.guindo@gop.link/.m2/repository/org/apache/commons/commons-lang3/3.12.0/commons-lang3-3.12.0-sources.jar">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 			<attribute name="maven.groupId" value="org.apache.commons"/>
@@ -28,6 +28,6 @@
 			<attribute name="maven.scope" value="compile"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/home/a.guindo@gop.link/Téléchargements/h2-2.1.212.jar"/>
+	<classpathentry kind="lib" path="/opt/h2/bin/h2-2.1.212.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
